# protocol

./: .gitignore  README.txt  protocol  pyproject.toml  setup.py  test.py
protocol/: __init__.py  constants.py  specs.py
protocol_graph/: __init__.py  exceptions.py  main.py
